# tauri-dbtools

./: .gitignore  MYGIT_CHANGELOG.md  MYGIT_QUICKSTART.md  MYGIT_README.md  MYGIT_SUMMARY.md  MYGIT_USAGE.md  Makefile  QUICK_FIX.md  README.md  README_UI_OPTIMIZATION.md  TASK_10.2_SUMMARY.md  TASK_10.3_SUMMARY.md  TASK_10.4_SUMMARY.md  TASK_2.1_IMPLEMENTATION_SUMMARY.md  TASK_2.5_ERROR_HANDLING_SUMMARY.md  TASK_2.6_ERROR_HANDLING_PBT_SUMMARY.md  TASK_9.3_SUMMARY.md  TESTING.md  UI_OPTIMIZATION_SUMMARY.md  auto_test.ps1  config.json  debug_export.ps1  examine_export.ps1  mygit.ps1  mygit.sh  mygit.ts  package.json  restart_app.bat  start.bat  start.sh  start_optimized.bat  test_backup_restore.ps1  test_complete.ps1  test_console.js  test_db_connection.ps1  test_db_operations.rs  test_file_dialog.md  test_sql_execution.html  verify_fix.ps1  使用说明.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.backup  lib_improved.rs  lib_pgtools.rs  lib_rust_impl.rs.backup  main.rs
src-tauri/src/models/: data.rs  mod.rs  query.rs  schema.rs
src-tauri/src/services/: ddl_generator.rs  mod.rs  query_executor.rs  schema_service.rs  sql_logger.rs  transaction_manager.rs
src-tauri/tests/: integration_test.rs  property_test_ddl_generator.rs  property_test_query_executor.proptest-regressions  property_test_query_executor.rs  property_test_transaction_manager.proptest-regressions  property_test_transaction_manager.rs  test_pgtools.rs  test_query_executor.rs  test_transaction_manager.rs
(+119 files in other folders)
