[package]
name = "pg-db-tool"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tempfile = "3.13"
dirs = "5.0"
