[package]
name = "pg-db-tool"
version = "0.1.0"
edition = "2021"
default-run = "pg-db-tool"

[[bin]]
name = "integration_test"
path = "tests/integration_test.rs"

[[bin]]
name = "test_pgtools"
path = "tests/test_pgtools.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
fern = "0.7"
tempfile = "3.13"
dirs = "5.0"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
